--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ a,
 label,
 button {
   font-family: "Urbanist", sans-serif;
-  font-size: 1.5rem;
+  font-size: 1.6rem;
   letter-spacing: 0.1rem;
   font-weight: 400;
   line-height: 1.5;
@@ -36,6 +36,7 @@ button {
 
 a {
     text-decoration: none;
+    color: white;
 }
 
 li {
@@ -63,3 +64,81 @@ li {
 
 /* resuable CSS start here */
 /* resuable CSS end here */
+
+
+
+
+/* Header Css start */
+.header {
+    background-color: #343a40;
+
+    & .container {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 1rem 2rem;
+        color: #fff;
+        
+        & .logo {
+           font-size: 2.5rem;
+           font-weight: 700;
+           text-transform: uppercase;
+        }
+        & .search-container {
+            display: flex;
+            align-items: center;
+            gap: 1rem;
+        }
+        & #search-bar {
+            padding: 1rem 1.5rem;
+            border-radius: 2rem;
+            border: none;
+            width: 20rem;
+            font-size: 1.5rem;
+        }
+        & .search-btn {
+            padding: 0.8rem 1.4rem;
+            background-color: #ff6347;
+            color: white;
+            border: none;
+            border-radius: 2rem;
+            cursor: pointer;
+            font-size: 1.5rem;
+            &:hover {
+                background-color: #e55347;
+            }
+        }
+        & .profile {
+            position: relative;
+        
+            &:hover .dropdown {
+                display: block;
+            }
+
+            & .dropdown {
+                display: none;
+                position: absolute;
+                right: 0;
+                top: 100%;
+                background-color: #fff;
+                color: #000;
+                box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+                border-radius: 5px;
+                overflow: hidden;
+        
+                & a {
+                    display: block;
+                    padding: 10px;
+                    text-decoration: none;
+                    color: #343a40;
+                    transition: background-color 0.3s ease;
+                    &:hover {
+                        background-color: #e9ecef;
+                    }
+                }
+            }
+        }
+    }
+}
+
+/* Header Css end */
