--- a/style.css
+++ b/style.css
@@ -70,13 +70,13 @@ li {
 
 /* Header Css start */
 .header {
-    background-color: #343a40;
+    background-color: #49535c;
+    box-shadow: rgba(0, 0, 0, 1) 0px 5px 15px;
 
     & .container {
-        display: flex;
         justify-content: space-between;
         align-items: center;
-        padding: 1rem 2rem;
+        padding: 1.8rem 2rem;
         color: #fff;
         
         & .logo {
@@ -104,17 +104,20 @@ li {
             border-radius: 2rem;
             cursor: pointer;
             font-size: 1.5rem;
+            transition: all 0.3s ease;
+
             &:hover {
                 background-color: #e55347;
             }
         }
+        
         & .profile {
             position: relative;
-        
+            transition: all 0.3s ease;
             &:hover .dropdown {
+                transition: all 0.3s ease;
                 display: block;
             }
-
             & .dropdown {
                 display: none;
                 position: absolute;
@@ -125,13 +128,14 @@ li {
                 box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
                 border-radius: 5px;
                 overflow: hidden;
+                transition: all 0.3s ease;
         
                 & a {
                     display: block;
                     padding: 10px;
                     text-decoration: none;
                     color: #343a40;
-                    transition: background-color 0.3s ease;
+                    transition: all 0.3s ease;
                     &:hover {
                         background-color: #e9ecef;
                     }
@@ -142,3 +146,97 @@ li {
 }
 
 /* Header Css end */
+
+
+
+/* sidebar style start here */
+
+#sidebar-wrapper {
+    align-items: center;
+    gap: 1rem;
+    background-color: #343a40;
+    width: fit-content;
+    padding: 2rem 1rem 2rem 0;
+
+    & #toggle-btn {
+        align-self: center;
+        background-color: #495057;
+        color: #fff;
+        border: none;
+        padding: 5px 10px;
+        cursor: pointer;
+        border-radius: 5px;
+
+        & img {
+            rotate: -90deg;
+        }
+    }
+}
+
+#sidebar  {
+    width: 250px;
+    /* height: 100vh; */
+    flex-direction: column;
+    gap: 2rem;
+    color: #fff;
+    display: flex;
+    padding: 10px;
+    transition: all 0.3s ease;
+    margin-right: 0;
+
+    & #tab-list {
+        list-style: none;
+        padding: 0;
+        margin: 0;
+        flex-grow: 1;
+        
+        & li{
+            padding: 1rem 0.8rem;
+            border-radius: 5px;
+            transition: all 0.3s ease;
+            display: flex;
+            align-items: center;
+            cursor: pointer;
+            &:hover {
+                background-color: #495057;
+            }
+            & a {
+                text-decoration: none;
+                color: #fff;
+                margin-left: 10px;
+            }
+            & i {
+                font-size: 18px;
+            }
+        }
+    }
+}
+
+.recent-search {
+    flex-direction: column;
+
+    & .search-data {
+        color: #e0e0e0;
+        font-size: 2rem;
+        font-weight: 500;
+        text-align: center;
+        margin-bottom: 1rem;
+    }
+    & .search-result {
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+        color: white;
+        overflow: auto;
+        width: 100%;
+        height: 33rem;
+
+        & li {
+            list-style: circle;
+            padding-right: 2rem;
+            color: #bababa;
+        }
+    }
+}
+
+/* sidebar style end here */
