--- a/style.css
+++ b/style.css
@@ -151,7 +151,7 @@ li {
 
 /* sidebar style start here */
 
-#sidebar-wrapper {
+.article-wrapper #sidebar-wrapper {
     align-items: center;
     gap: 1rem;
     background-color: #343a40;
@@ -242,4 +242,119 @@ li {
     }
 }
 
+
+.article-wrapper #right-sidebar-wrapper {
+    padding-top: 2rem;
+}
 /* sidebar style end here */
+
+
+
+
+
+/* popup stype start */
+.popUp-wrapper .overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+}
+
+.popUp-wrapper .filter-popup {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: #fff;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+    border-radius: 8px;
+    width: 90%;
+    max-width: 400px;
+    padding: 20px;
+    z-index: 1000;
+    /* display: none; */
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    align-items: center;
+    justify-content: center;
+
+
+    & .close-btn {
+        position: absolute;
+        top: 0;
+        right: 1rem;
+        background: none;
+        border: none;
+        font-size: 2rem;
+        font-weight: bold;
+        cursor: pointer;
+        color: #333;
+    
+        &:hover {
+            color: #ff0000;
+            transform: scale(1.2);
+            transition: all 0.2s, transform 0.2s;
+        }
+    }
+    
+
+    & h2 {
+        margin-bottom: 0.4rem;
+        color: #333;
+        font-size: 2rem;
+        text-align: center;
+    }
+
+    & ul {
+        list-style: none;
+        padding: 0;
+        margin: 0;
+        display: flex;
+        flex-wrap: wrap;
+        gap: 10px;
+        justify-content: center;
+
+        & li {
+            background-color: #007bff;
+            color: #ffffff;
+            background-color: #dbedff;
+            color: #333333;
+            padding: 1rem 1.5rem;
+            border-radius: 2rem;
+            cursor: pointer;
+            transition: background-color 0.3s;
+
+            &:hover {
+                background-color: #0056b3;
+                color: white;
+            }
+        }
+    }
+
+    & .filter-btn {
+        padding: 0.6rem 1.5rem;
+        border: none;
+        border-radius: 0.6rem;
+        background-color: #ff6347;
+        color: white;
+        font-weight: 500;
+        font-size: 1.7rem;
+        margin-top: 2rem;
+        cursor: pointer;
+        transition: all 0.3s ease;
+
+        &:hover {
+            background-color: #e55347;
+        }
+    }
+}
+
+
+
+
+
+
+/* popup stype end */
