--- a/style.css
+++ b/style.css
@@ -271,10 +271,9 @@ li {
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
     border-radius: 8px;
     width: 90%;
-    max-width: 400px;
-    padding: 20px;
-    z-index: 1000;
-    /* display: none; */
+    max-width: 40rem;
+    z-index: 4;
+    padding: 2rem;
     display: flex;
     flex-direction: column;
     gap: 1rem;
@@ -284,18 +283,21 @@ li {
 
     & .close-btn {
         position: absolute;
-        top: 0;
+        top: 10px;
         right: 1rem;
-        background: none;
+        background: #dadada;
+        padding: 0.4rem 1rem;
+        line-height: 1;
         border: none;
         font-size: 2rem;
         font-weight: bold;
         cursor: pointer;
         color: #333;
+        border-radius: 7px;
     
         &:hover {
             color: #ff0000;
-            transform: scale(1.2);
+            transform: scale(1.1);
             transition: all 0.2s, transform 0.2s;
         }
     }
@@ -331,6 +333,17 @@ li {
                 background-color: #0056b3;
                 color: white;
             }
+
+            & input[type="checkbox"] {
+                position: absolute;
+                opacity: 0;
+                pointer-events: none;
+                cursor: pointer;
+            }    
+            
+            & input , label {
+                cursor: pointer;
+            }
         }
     }
 
@@ -344,10 +357,11 @@ li {
         font-size: 1.7rem;
         margin-top: 2rem;
         cursor: pointer;
-        transition: all 0.3s ease;
+        transition: all 0.2s ease;
 
         &:hover {
             background-color: #e55347;
+            transform: scale(0.9);
         }
     }
 }
