--- a/style.css
+++ b/style.css
@@ -26,7 +26,8 @@ p,
 li,
 a,
 label,
-button {
+button, 
+span {
   font-family: "Urbanist", sans-serif;
   font-size: 1.6rem;
   letter-spacing: 0.1rem;
@@ -57,6 +58,9 @@ li {
 }
 .grid {
     display: grid;
+}
+.grid-two--cols {
+    grid-template-columns: repeat(2, 1fr);
 }
 /* Layout End Here */
 
@@ -114,6 +118,7 @@ li {
         & .profile {
             position: relative;
             transition: all 0.3s ease;
+            z-index: 1;
             &:hover .dropdown {
                 transition: all 0.3s ease;
                 display: block;
@@ -146,108 +151,6 @@ li {
 }
 
 /* Header Css end */
-
-
-
-/* sidebar style start here */
-
-.article-wrapper #sidebar-wrapper {
-    align-items: center;
-    gap: 1rem;
-    background-color: #343a40;
-    width: fit-content;
-    padding: 2rem 1rem 2rem 0;
-    min-height: 92vh;
-    position: relative;
-
-    & #toggle-btn {
-        align-self: center;
-        background-color: #495057;
-        color: #fff;
-        border: none;
-        padding: 5px 10px;
-        cursor: pointer;
-        border-radius: 5px;
-        margin-left: 1rem;
-
-        & img {
-            rotate: 90deg;
-        }
-    }
-}
-
-#sidebar  {
-    width: 250px;
-    /* height: 100vh; */
-    flex-direction: column;
-    gap: 2rem;
-    color: #fff;
-    display: flex;
-    padding: 10px;
-    transition: all 0.3s ease;
-    margin-right: 0;
-
-    & #tab-list {
-        list-style: none;
-        padding: 0;
-        margin: 0;
-        flex-grow: 1;
-        
-        & li{
-            padding: 1rem 0.8rem;
-            border-radius: 5px;
-            transition: all 0.3s ease;
-            display: flex;
-            align-items: center;
-            cursor: pointer;
-            &:hover {
-                background-color: #495057;
-            }
-            & a {
-                text-decoration: none;
-                color: #fff;
-                margin-left: 10px;
-            }
-            & i {
-                font-size: 18px;
-            }
-        }
-    }
-}
-
-.recent-search {
-    flex-direction: column;
-
-    & .search-data {
-        color: #e0e0e0;
-        font-size: 2rem;
-        font-weight: 500;
-        text-align: center;
-        margin-bottom: 1rem;
-    }
-    & .search-result {
-        display: flex;
-        flex-direction: column;
-        gap: 1rem;
-        color: white;
-        overflow: auto;
-        width: 100%;
-        height: 33rem;
-
-        & li {
-            list-style: circle;
-            padding-right: 2rem;
-            color: #bababa;
-        }
-    }
-}
-
-
-.article-wrapper #right-sidebar-wrapper {
-    padding-top: 2rem;
-}
-/* sidebar style end here */
-
 
 
 
@@ -367,9 +270,157 @@ li {
     }
 }
 
-
-
-
-
-
 /* popup stype end */
+
+
+
+
+/* sidebar style start here */
+
+/* left sidebar style */
+.article-wrapper {
+    position: relative
+}
+.article-wrapper #sidebar-wrapper {
+    align-items: center;
+    gap: 1rem;
+    background-color: #343a40;
+    width: fit-content;
+    padding: 2rem 1rem 2rem 0;
+    min-height: 100vh;
+    max-height: 100vh;
+    position: sticky;
+    top: 0;
+
+    & #toggle-btn {
+        align-self: center;
+        background-color: #495057;
+        color: #fff;
+        border: none;
+        padding: 5px 10px;
+        cursor: pointer;
+        border-radius: 5px;
+        margin-left: 1rem;
+
+        & img {
+            rotate: 90deg;
+        }
+    }
+}
+
+#sidebar  {
+    width: 250px;
+    /* height: 100vh; */
+    flex-direction: column;
+    gap: 2rem;
+    color: #fff;
+    display: flex;
+    padding: 10px;
+    transition: all 0.3s ease;
+    margin-right: 0;
+
+    & #tab-list {
+        list-style: none;
+        padding: 0;
+        margin: 0;
+        flex-grow: 1;
+        
+        & li{
+            padding: 1rem 0.8rem;
+            border-radius: 5px;
+            transition: all 0.3s ease;
+            display: flex;
+            align-items: center;
+            cursor: pointer;
+            &:hover {
+                background-color: #495057;
+            }
+            & a {
+                text-decoration: none;
+                color: #fff;
+                margin-left: 10px;
+            }
+            & i {
+                font-size: 18px;
+            }
+        }
+    }
+}
+
+.recent-search {
+    flex-direction: column;
+
+    & .search-data {
+        color: #e0e0e0;
+        font-size: 2rem;
+        font-weight: 500;
+        text-align: center;
+        margin-bottom: 1rem;
+    }
+    & .search-result {
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+        color: white;
+        overflow: auto;
+        width: 100%;
+        height: 33rem;
+
+        & li {
+            list-style: circle;
+            padding-right: 2rem;
+            color: #bababa;
+        }
+    }
+}
+/* left sidebar style end */
+
+
+/* right sidebar style  */
+.article-wrapper #right-sidebar-wrapper {
+    padding-top: 2rem;
+    display: flex;
+    align-items: start;
+    justify-content: center;
+
+    & #blog-preview-card {
+        grid-template-columns: 1fr 0.4fr;
+        max-width: 60%;
+        place-items: center;
+        padding: 2rem;
+        background-color: #ebebeb;
+        border-radius: 1rem;
+        gap: 1rem;
+
+        & .blog-content-wrapper {
+            flex-direction: column;
+            & #author-profile {
+
+                & #author-image {
+                    width: 5rem;
+                    aspect-ratio: 1;
+                    height: 6rem;
+                    border-radius: 50%;
+                    background-color: yellow;
+                }
+            }
+        }
+
+        & figure {
+            width: 100%;
+
+            & img {
+                width: 100%;
+            }
+        }
+    }
+}
+/* right sidebar style end */
+
+
+/* sidebar style end here */
+
+
+
+
+
