--- a/style.css
+++ b/style.css
@@ -310,7 +310,7 @@ li {
 
 #sidebar  {
     width: 250px;
-    /* height: 100vh; */
+    height: 100vh;
     flex-direction: column;
     gap: 2rem;
     color: #fff;
@@ -377,6 +377,11 @@ li {
 
 
 /* right sidebar style  */
+.article-wrapper #right-sidebar-wrapper .preview-card-wrapper {
+    flex-direction: column;
+    align-items: center;
+    gap: 2.5rem;
+}
 .article-wrapper #right-sidebar-wrapper {
     padding-top: 4rem;
     display: flex;
@@ -388,6 +393,7 @@ li {
         max-width: 75%;
         place-items: center;
         padding: 2rem 3rem 1rem;
+        margin-bottom: 1rem;
         /* background-color: #ebebeb; */
         background-color: white;
         border-radius: 1rem;
