Some random data taken from chatGpt for testing purpose and all tags has been declared in script file for maing dynamic blog post preview.

--- a/style.css
+++ b/style.css
@@ -440,7 +440,7 @@ li {
                 & .publish-date {
 
                 } 
-                & .likeCount {
+                & .reachStats {
                     display: flex;
                     gap: 1.5rem;
                 }
