--- a/style.css
+++ b/style.css
@@ -537,55 +537,38 @@ li {
 
     & #blog-contentSection {
         width: 100%;
-        min-height: 30rem;
         background-color: #ebebeb;
         border-radius: 5px;
         margin-top: 1rem;
 
-        & #textLine {
-            background-color: white;
-            width: 100%;
-            align-items: start;
-            /* height: 4rem; */
-            border-radius: inherit;
-            
-            & button {
-                border: none;
-                outline: none;
-                width: fit-content;
-                height: 100%;
-                font-size: 3rem;
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                padding: 0 0.5rem;
-                background: #c6c6c6;
-                cursor: pointer;
-                border-top-left-radius: inherit;
-            }
+        display: flex;
+        align-items: center;
+        justify-content: center;
 
-            & #blogTextContent {
-                width: 100%;
-                height: 100%;
-                border-radius: inherit;
-                min-height: 4.5rem;
-                border: none;
-                outline: none;
-                
-                & input {
-                    width: 100%;
-                    height: 100%;
-                    outline: none;
-                    padding: 1rem 1.5rem;
-                    font-size: 1.7rem;
-                    font-weight: 300;
-                    border: none;
-                    border-radius: inherit;
-                    
-                }
-            }
+        & #contentInput {
+            width: 100%;
+            min-height: 45rem;
+            max-height: max-content;
+            padding: 1rem;
+            font-size: 1.6rem;
+            font-family: Arial, sans-serif;
+            line-height: 1.5;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            outline: none;
+            resize: none; 
+            overflow-y: scroll; 
+            overflow-x: hidden; 
+            box-sizing: border-box;
+            scrollbar-width: none; 
+            -ms-overflow-style: none;
         }
+        
     }
+    & #blog-contentSection::-webkit-scrollbar {
+        width: 0; 
+        height: 0; 
+    }
+    
 }
-/* Create blog tab style end : style for text editor */
 
